--- a/scss/_component.avatar.scss
+++ b/scss/_component.avatar.scss
@@ -1,7 +1,7 @@
 .avatar,
 .avatar__image {
-  width: $space-x * 6;
-  height: $space-x * 6;
+  width: $space-xxl;
+  height: $space-xxl;
   border-radius: 2000px;
 }
 
