--- a/scss/_component.main-nav.scss
+++ b/scss/_component.main-nav.scss
@@ -3,7 +3,7 @@
 
   a {
     display: inline-block;
-    padding: $space-x ($space-y / 2);
+    padding: $space-default ($space-s);
     color: color('text-light');
     font-feature-settings: $font-features, 'smcp', 'c2sc';
 
