--- a/scss/_component.article.scss
+++ b/scss/_component.article.scss
@@ -4,17 +4,17 @@
 
 .article__inner {
   // @include span-columns(12);
-  padding: ($space-x * 2) $space-y;
+  padding: ($space-l) $space-default;
 
   @include bp(medium) {
-    padding-right: ($space-y * 2);
-    padding-left: ($space-y * 2);
+    padding-right: ($space-l);
+    padding-left: ($space-l);
   }
 }
 
 .article__title {
   display: inline-block;
-  margin-left: $space-y;
+  margin-left: $space-default;
 
   font-family: $font-family;
   font-size: modular-scale(1);
@@ -22,12 +22,12 @@
   color: color('text-light');
 
   background-color: color('white');
-  box-shadow: (-1 * $space-y / 4) 0 color('white'), ($space-y / 4) 0 color('white');
+  box-shadow: (-1 * $space-default / 4) 0 color('white'), ($space-default / 4) 0 color('white');
   font-feature-settings: $font-features, 'smcp', 'c2sc';
 
   @include bp(medium) {
-    margin-left: ($space-y * 2);
-    box-shadow: (-1 * $space-y / 2) 0 color('white'), ($space-y / 2) 0 color('white');
+    margin-left: ($space-l);
+    box-shadow: (-1 * $space-s) 0 color('white'), ($space-s) 0 color('white');
   }
 }
 
@@ -35,13 +35,13 @@
   position: relative;
   z-index: 1;
 
-  margin-right: -1 * $space-y;
-  margin-bottom: ($space-x * 2);
-  margin-left: -1 * $space-y;
+  margin-right: -1 * $space-default;
+  margin-bottom: ($space-l);
+  margin-left: -1 * $space-default;
 
   @include bp(medium) {
-    margin-right: -1 * ($space-y * 2);
-    margin-left: -1 * ($space-y * 2);
+    margin-right: -1 * ($space-l);
+    margin-left: -1 * ($space-l);
   }
 
   &::after {
