--- a/scss/_component.footer.scss
+++ b/scss/_component.footer.scss
@@ -5,19 +5,19 @@
 .footer__inner {
   @include clearfix;
 
-  padding: ($space-x * 2) $space-y;
+  padding: ($space-l) $space-default;
   border-top: $border;
 
   @include bp(medium) {
-    padding-right: ($space-y * 2);
-    padding-left: ($space-y * 2);
+    padding-right: ($space-l);
+    padding-left: ($space-l);
   }
 }
 
 .footer__content,
 .footer__legal {
   font-size: modular-scale(-1);
-  line-height: 2 * $space-x;
+  line-height: 2 * $space-default;
 
   @include bp(medium) {
     color: color('text-lighter');
@@ -44,7 +44,7 @@
       // @include span-columns(5);
     }
 
-    margin-top: $space-x;
+    margin-top: $space-default;
 
     @include bp(medium) {
       margin-top: 0;
