--- a/scss/_component.hero.scss
+++ b/scss/_component.hero.scss
@@ -5,15 +5,15 @@
 .hero__inner {
   @include clearfix;
 
-  padding: ($space-x * 2) $space-y;
+  padding: ($space-l) $space-default;
 
   @include bp(medium) {
-    padding-right: ($space-y * 2);
-    padding-left: ($space-y * 2);
+    padding-right: ($space-l);
+    padding-left: ($space-l);
   }
 
   @include bp(large) {
-    min-height: ($space-x * 21);
+    min-height: ($space-xxl);
   }
 }
 
