--- a/scss/_component.media-object.scss
+++ b/scss/_component.media-object.scss
@@ -15,14 +15,14 @@
 .media-object__figure {
   @include bp(medium) {
     width: percentage(3 / 12);
-    padding-right: $space-y / 2;
+    padding-right: $space-s;
   }
 }
 
 .media-object__content {
   @include bp(medium) {
     width: percentage(9 / 12);
-    padding-left: $space-y / 2;
+    padding-left: $space-s;
   }
 
   @include bp(large) {
@@ -31,10 +31,10 @@
 }
 
 .media-object--space-out {
-  margin-bottom: $space-x * 2;
+  margin-bottom: $space-l;
 
   @include bp(medium) {
-    margin-bottom: $space-x * 4;
+    margin-bottom: $space-xl;
   }
 }
 
