--- a/scss/_vendor.embedresponsively.scss
+++ b/scss/_vendor.embedresponsively.scss
@@ -5,7 +5,7 @@
   height: 0;
   max-width: 100%;
   padding-bottom: 56.25%; // 16:9 aspect ratio
-  margin-bottom: $space-x * 2;
+  margin-bottom: $space-l;
   overflow: hidden;
 
   iframe,
