--- a/scss/_settings.project.scss
+++ b/scss/_settings.project.scss
@@ -50,7 +50,7 @@ $colors: (
 // ---
 $fallback-font-families: 'Source Sans Pro', 'Open Sans', Avenir, 'Gill Sans MT', 'Gill Sans', Corbel, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $font-family:         'skolar-latin', $fallback-font-families;
-$font-family-heading: 'soleil', $fallback-font-families;
+$font-family-alt: 'soleil', $fallback-font-families;
 
 $font-size: #{$root-font-size-px}px;
 $font-weight:      400;
