--- a/scss/_component.main-nav.scss
+++ b/scss/_component.main-nav.scss
@@ -4,6 +4,7 @@
   a {
     display: inline-block;
     padding: $space-default ($space-s);
+    font-family: $font-family-alt;
     color: color('text-light');
     font-feature-settings: $font-features, 'smcp', 'c2sc';
 
