--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -6,7 +6,17 @@ html {
   line-height: $root-line-height / $root-font-size-px;
   color: color('text');
   text-rendering: geometricPrecision;
+  background-color: color('bg');
   font-feature-settings: $font-features;
+
+  @include bp(medium) {
+    font-size: 125%; // 18px → 20px, 20/16
+  }
+
+  @include bp(large) {
+    font-size: 150%; // 18px → 24px, 24/16
+  }
+
 
   &.wf-active {
     font-family: $font-family;
