--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -10,11 +10,11 @@ html {
   font-feature-settings: $font-features;
 
   @include bp(medium) {
-    font-size: 125%; // 18px → 20px, 20/16
+    font-size: percentage(23 / 16); // 17px → 23px
   }
 
   @include bp(large) {
-    font-size: 150%; // 18px → 24px, 24/16
+    font-size: percentage(30 / 16); // 17px → 30px
   }
 
 
