--- a/scss/_component.overlay.scss
+++ b/scss/_component.overlay.scss
@@ -12,7 +12,7 @@
 }
 
 .overlay__container {
-  // @include outer-container;
+  @include grid-container;
   display: flex;
   align-content: flex-start;
   align-items: flex-start;
