--- a/scss/_settings.project.scss
+++ b/scss/_settings.project.scss
@@ -4,16 +4,53 @@
 $root-font-size-px:  17;
 $root-line-height:   28;
 $root-scaling-ratio: 1.333;
+$root-space: 1rem * (($root-line-height / 2) / $root-font-size-px);
+
+// ---
+// Breakpoints
+// ---
+
+$breakpoints: (
+  small:   0,
+  medium:  640,
+  large:   1024,
+  xlarge:  1200,
+  xxlarge: 1440
+);
 
 // ---
 // Vendor
 // ---
+
+// Bourbon
 $em-base:             $root-font-size-px * 1px;
 $modular-scale-ratio: $root-scaling-ratio;
+
+// Bourbon Neat
+$neat-grid: (
+  columns: 5,
+  gutter: $root-space,
+);
+// Use 2-3 Column configurations
+
+$neat-grid-medium: (
+  columns: 11,
+  gutter: $root-space,
+  media: (map-get($breakpoints, medium) / 16) * 1em
+);
+// Use 3-6-2 Column configurations
+
+$neat-grid-large: (
+  columns: 16,
+  gutter: $root-space,
+  media: (map-get($breakpoints, large) / 16) * 1em
+);
+// Use 4-9-3 Column configurations
 
 // Only mixins and extended vendors, so that it can
 // be used in this settings and other styles.
 @import 'bourbon/app/assets/stylesheets/bourbon';
+@import 'bourbon-neat/core/neat';
 @import 'accoutrement-color/sass/color';
 
 // ---
@@ -26,17 +63,17 @@ $colors: (
   'highlight':    #fafafa,
   'white':        #ffffff,
 
-  'grey-lighter': #d1d6d4,
-  'grey-light':   #b0bab5,
-  'grey':         #698075,
-  'grey-dark':    #40574d,
+  'grey':         #757575,
+  'grey-lighter': 'grey' ('tint': 13.5%),
+  'grey-light':   'grey' ('tint': 27%),
+  'grey-dark':    'grey' ('shade': 27%),
 
   'brand-dark':   'brand' ('shade': 10%),
 
   'bg':           'highlight',
   'text':         'shadow',
-  'text-light':   'grey',
-  'text-lighter': 'grey-light',
+  'text-light':   'grey-light',
+  'text-lighter': 'grey-lighter',
   'link':         'brand',
   'link-light':   'brand' ('tint': 65%),
   'link-hover':   'brand' ('shade': 10%),
@@ -65,21 +102,22 @@ $font-features: 'kern', 'liga'; //TODO: check 'frac' and add if required.
 // Spaces
 // ---
 
-$space-default: 1rem * (($root-line-height / 2) / $root-font-size-px);;
+$space-default: 1rem * (($root-line-height / 2) / $root-font-size-px);
 
-$space-xxs: $space-default / 8;
-$space-xs:  $space-default / 4;
-$space-s:   $space-default / 2;
-$space-m:   $space-default;
-$space-l:   $space-default * 2;
-$space-xl:  $space-default * 4;
-$space-xxl: $space-default * 8;
+$space-xxs: $root-space / 8;
+$space-xs:  $root-space / 4;
+$space-s:   $root-space / 2;
+$space-m:   $root-space;
+$space-l:   $root-space * 2;
+$space-xl:  $root-space * 4;
+$space-xxl: $root-space * 8;
 
 // ---
 // Border
 // ---
-$border-width:  1px;
-$border-radius: 3px;
+$border-width:       1px;
+$border-width-large: $root-space / 8;
+$border-radius:      3px;
 
 $border: $border-width solid color('border');
 
