--- a/src/includes/header.njk
+++ b/src/includes/header.njk
@@ -1,15 +1,15 @@
+{% from "../macros/divider.njk" import divider %}
 <div class="header">
-	<div class="header__inner">
-		<div class="header__brand">
-			<a href="/"><span class="logo">{% include "../images/logo.svg" %}</span></a>
-		</div>
-		<div class="header__nav">
-			<nav class="main-nav">
-				<a class="{{ 'active' if path == 'work' }}" href="/work/">Work</a>
-				<a class="{{ 'active' if path == 'team' }}" href="/team/">Team</a>
-				<a class="{{ 'active' if path == 'contact' }}" href="/contact/">Contact</a>
-				<a href="{{ site.blogUrl }}">Blog</a>
-			</nav>
-		</div>
+	<div class="header__brand">
+		<a class="header__logo-link" href="/"><span class="logo">{% include "../images/logo-center-offset.svg" %}</span></a>
+	</div>
+	<div class="header__nav">
+		<nav class="main-nav">
+			<a class="{{ 'active' if path == 'work' }}" href="/work/">Work</a>
+			<a class="{{ 'active' if path == 'team' }}" href="/team/">Team</a>
+			<a class="{{ 'active' if path == 'contact' }}" href="/contact/">Contact</a>
+			<a href="{{ site.blogUrl }}">Blog</a>
+		</nav>
 	</div>
 </div>
+{{ divider() }}
