--- a/scss/_tools.breakpoints.scss
+++ b/scss/_tools.breakpoints.scss
@@ -2,31 +2,31 @@
 
 // $ui-breakpoints is defined in the config/ui.config.json
 
-$ui-breakpoints: (
+$breakpoints: (
   small:   0,
   medium:  640,
   large:   1024,
   xlarge:  1200,
   xxlarge: 1440
-);
+) !default;
 
-$breakpoints: ();
+$_breakpoints: ();
 
-@each $key, $pixels in $ui-breakpoints {
+@each $key, $pixels in $breakpoints {
   $screen-string: 'only screen';
 
   @if ($pixels == 0) {
-    $breakpoints: map-merge($breakpoints, ($key: '#{$screen-string}'));
+    $_breakpoints: map-merge($_breakpoints, ($key: '#{$screen-string}'));
   } @else {
-    $breakpoints: map-merge(
-      $breakpoints,
+    $_breakpoints: map-merge(
+      $_breakpoints,
       ($key: '#{$screen-string} and (min-width: #{$pixels / 16}em)'));
   }
 }
 
 @mixin breakpoint($media) {
-  @if map-has-key($breakpoints, $media) {
-    @media #{map-get($breakpoints, $media)} {
+  @if map-has-key($_breakpoints, $media) {
+    @media #{map-get($_breakpoints, $media)} {
       @content;
     }
   } @else {
