--- a/src/layouts/base.njk
+++ b/src/layouts/base.njk
@@ -43,12 +43,14 @@
 		<!-- endbuild -->
 	</head>
 	<body>
-		{% include "../includes/header.njk" %}
+		<div class="page">
+			{% include "../includes/header.njk" %}
 
-		{% block content %}
-		{% endblock %}
+			{% block content %}
+			{% endblock %}
 
-		{% include "../includes/footer.njk" %}
+			{% include "../includes/footer.njk" %}
+		</div>
 		{{ overlayContactForm(
 			email=site.contactEmail,
 			pageIdentifier=title,
