--- a/scss/_component.hero.scss
+++ b/scss/_component.hero.scss
@@ -2,29 +2,16 @@
   @include grid-container;
 }
 
-.hero__inner {
-  @include clearfix;
-
-  padding: ($space-l) $space-default;
-
-  @include bp(medium) {
-    padding-right: ($space-l);
-    padding-left: ($space-l);
-  }
-
-  @include bp(large) {
-    min-height: ($space-xxl);
-  }
-}
-
 .hero__text-unit {
-  // @include span-columns(12);
+  @include grid-column(5);
 
-  @include bp(medium) {
-    // @include span-columns(9);
+  @include grid-media($neat-grid-medium) {
+    @include grid-column(6);
+    @include grid-push(3);
   }
 
-  @include bp(large) {
-    // @include span-columns(7);
+  @include grid-media($neat-grid-large) {
+    @include grid-column(9);
+    @include grid-push(4);
   }
 }
