--- a/scss/_component.main-nav.scss
+++ b/scss/_component.main-nav.scss
@@ -2,6 +2,7 @@
   a {
     @extend %link-major;
     display: block;
+    margin: 0;
     font-family: $font-family-alt;
     font-size: modular-scale(-1);
     color: color('text-light');
@@ -11,10 +12,11 @@
     &:active,
     &:focus {
       color: color('text');
+      opacity: 1;
     }
 
     &.active {
-      color: color('text-lighter');
+      color: color('text');
     }
   }
 }
