--- a/src/includes/header.njk
+++ b/src/includes/header.njk
@@ -5,9 +5,9 @@
 	</div>
 	<div class="header__nav">
 		<nav class="main-nav">
-			<a class="{{ 'active' if path == 'work' }}" href="/work/">Work</a>
-			<a class="{{ 'active' if path == 'team' }}" href="/team/">Team</a>
-			<a class="{{ 'active' if path == 'contact' }}" href="/contact/">Contact</a>
+			<a class="{{ 'active' if path == 'work.html.njk' }}" href="/work/">Work</a>
+			<a class="{{ 'active' if path == 'team.html.njk' }}" href="/team/">Team</a>
+			<a class="{{ 'active' if path == 'contact.html.njk' }}" href="/contact/">Contact</a>
 			<a href="{{ site.blogUrl }}">Blog</a>
 		</nav>
 	</div>
