--- a/scss/_component.hero-quote.scss
+++ b/scss/_component.hero-quote.scss
@@ -21,12 +21,13 @@
 }
 
 .hero-quote__quote {
+  min-height: 50vmin;
   margin: 0;
-  font-size: modular-scale(1);
+  font-size: modular-scale(2);
   line-height: $line-height-heading;
 
-  @include bp(large) {
-    font-size: modular-scale(2);
+  @include bp(medium) {
+    min-height: 0;
   }
 }
 
