--- a/scss/_component.hero.scss
+++ b/scss/_component.hero.scss
@@ -4,6 +4,7 @@
 
 .hero__text-unit {
   @include grid-column(5);
+  padding-bottom: $space-xl;
 
   @include grid-media($neat-grid-medium) {
     @include grid-column(6);
