--- a/scss/_component.media-object.scss
+++ b/scss/_component.media-object.scss
@@ -1,55 +1,67 @@
 .media-object {
-  display: flex;
-  flex-wrap: wrap;
+  @include grid-container;
+  @include grid-collapse;
 
-  @include bp(medium) {
-    flex-wrap: nowrap;
+  & + &  {
+    margin-top: $space-xl;
   }
 }
 
 .media-object__figure,
-.media-object__content {
-  width: 100%;
+.media-object__content,
+.media-object__footer {
+  margin: 0;
 }
 
 .media-object__figure {
-  @include bp(medium) {
-    width: percentage(3 / 12);
-    padding-right: $space-s;
+  @include grid-column(5);
+
+  @include grid-media($neat-grid-medium) {
+    @include grid-column(3);
+  }
+
+  @include grid-media($neat-grid-large) {
+    @include grid-column(4);
   }
 }
 
 .media-object__content {
-  @include bp(medium) {
-    width: percentage(9 / 12);
-    padding-left: $space-s;
+  @include grid-column(5);
+
+  @include grid-media($neat-grid-medium) {
+    @include grid-column(6);
   }
 
-  @include bp(large) {
-    width: percentage(7 / 12);
-  }
-}
-
-.media-object--space-out {
-  margin-bottom: $space-l;
-
-  @include bp(medium) {
-    margin-bottom: $space-xl;
+  @include grid-media($neat-grid-large) {
+    @include grid-column(9);
   }
 }
 
-.media-object--align-figure-center-on-small {
-  .media-object__figure {
-    text-align: center;
+.media-object__footer {
+  @include grid-column(5);
 
-    @include bp(medium) {
-      text-align: left;
-    }
+  @include grid-media($neat-grid-medium) {
+    @include grid-column(6);
+    @include grid-push(3);
+  }
+
+  @include grid-media($neat-grid-large) {
+    @include grid-column(3);
   }
 }
 
-.media-object--flatten-figure-on-small {
-  .media-object__figure > * {
-    display: inline-block;
-  }
-}
+// .media-object--align-figure-center-on-small {
+//   .media-object__figure {
+//     text-align: center;
+
+//     @include bp(medium) {
+//       text-align: left;
+//     }
+//   }
+// }
+
+// .media-object--flatten-figure-on-small {
+//   .media-object__figure > * {
+//     display: inline-block;
+//   }
+// }
