--- a/scss/_component.network-list.scss
+++ b/scss/_component.network-list.scss
@@ -1,16 +1,23 @@
 .network-list {
+  font-family: $font-family-alt;
   font-size: 0;
   font-feature-settings: $font-features, 'smcp', 'c2sc';
 
   a {
     @extend %link-major;
     font-size: 1rem;
+    color: color('text-light');
+
+    @include bp(large) {
+      display: block;
+      margin: 0;
+    }
 
     &::after {
       content: ' · ';
 
       @include bp(large) {
-        font-size: modular-scale(-1);
+        display: none;
       }
     }
 
