--- a/src/e-commerce-blaster.html.njk
+++ b/src/e-commerce-blaster.html.njk
@@ -14,7 +14,7 @@ disableOgMetaTags: false
 		<div class="article__header">
 			<h1 class="article__title">{{ title }}</h1>
 		</div>
-		<div class="article__content">
+		<div class="article__content article__content--column">
 			<blockquote>
 				“You’ve the data, you know how much you earn; you want more and better ways to get return on your investments.”
 			</blockquote>
