--- a/src/includes/recent-projects.njk
+++ b/src/includes/recent-projects.njk
@@ -1,6 +1,6 @@
 {% from "../macros/project-snippet.njk" import projectSnippet %}
 
-<article class="article article--full-width">
+<article class="article">
 	<div class="article__inner">
 		<div class="article__header">
 			<h2 class="article__title">Recent Projects</h2>
