--- a/src/macros/member-snippet.njk
+++ b/src/macros/member-snippet.njk
@@ -1,27 +1,29 @@
 {% from "./img-srcset.njk" import profileImgSrcset %}
 
 {% macro memberSnippet(metaData, md5Fn, keysFn, console) %}
-<div class="media-object media-object--space-out media-object--align-figure-center-on-small">
-	<div class="media-object__figure">
+<div class="media-object media-object--align-figure-center-on-small">
+	<div class="media-object__figure align-h-center">
 		{% if metaData.email %}
 			{% set imageClassNames = 'avatar__image' %}
 			<div class="avatar{% if metaData.photoBrightness %} avatar--{{metaData.photoBrightness }}{% endif %}">{{ profileImgSrcset(class=imageClassNames, emailHash=md5Fn(metaData.email)) }}</div>
 		{% endif %}
 		{% if metaData.logoUrl %}
-			<span class="organisation-logo{% if metaData.logoLarge %} organisation-logo--large{% endif %}">
+			<span class="organisation-logo">
 				<img src="{{metaData.logoUrl}}" alt="Logo of {{ metaData.name }}" class="organisation-logo__image">
 			</span>
 		{% else %}
-		<h2>{{ metaData.name }}</h2>
+		<h3 class="text-align-center full-width">{{ metaData.name }}</h3>
 		{% endif %}
+	</div>
+	<div class="media-object__content">
+		{{metaData.contents | safe}}
+	</div>
+	<div class="media-object__footer">
 		<nav class="network-list">
 			{% for network in metaData.socialNetworks | sort(false, false, 'title') %}
 				<a href="{{ network.url }}" title="{{ network.title }}"><span class="network-list__title">{{ network.title }}</span></a>
 			{% endfor %}
 		</nav>
-	</div>
-	<div class="media-object__content">
-		{{metaData.contents | safe}}
 	</div>
 </div>
 {% endmacro %}
