--- a/src/work.html.njk
+++ b/src/work.html.njk
@@ -7,17 +7,15 @@ title: Selected Work
 {% from "./macros/project-snippet.njk" import projectSnippet %}
 
 {% block content %}
-<article class="article article--full-width">
-	<div class="article__inner">
-		<div class="article__header">
-			<h2 class="article__title">{{title}}</h2>
-		</div>
-		<div class="article__content">
-			<div class="recent-projects">
-				{% for project in collections.projects %}
-					{{projectSnippet(project, console)}}
-				{% endfor %}
-			</div>
+<article class="article">
+	<div class="article__header">
+		<h2 class="article__title">{{title}}</h2>
+	</div>
+	<div class="article__content">
+		<div class="recent-projects">
+			{% for project in collections.projects %}
+				{{projectSnippet(project, console)}}
+			{% endfor %}
 		</div>
 	</div>
 </article>
