--- a/scss/_component.article.scss
+++ b/scss/_component.article.scss
@@ -2,84 +2,64 @@
   @include grid-container;
 }
 
-.article__inner {
-  // @include span-columns(12);
-  padding: ($space-l) $space-m;
-
-  @include bp(medium) {
-    padding-right: ($space-l);
-    padding-left: ($space-l);
-  }
-}
-
-.article__title {
-  display: inline-block;
-  margin-left: $space-m;
-
-  font-family: $font-family;
-  font-size: modular-scale(1);
-  font-weight: $font-weight;
-  color: color('text-light');
-
-  background-color: color('bg');
-  box-shadow: (-1 * $space-m / 4) 0 color('bg'), ($space-m / 4) 0 color('bg');
-  font-feature-settings: $font-features, 'smcp', 'c2sc';
-
-  @include bp(medium) {
-    margin-left: ($space-l);
-    box-shadow: (-1 * $space-s) 0 color('bg'), ($space-s) 0 color('bg');
-  }
-}
+// .article__title {}
 
 .article__header {
-  position: relative;
-  z-index: 1;
+  @include grid-column(5);
 
-  margin-right: -1 * $space-m;
-  margin-bottom: ($space-l);
-  margin-left: -1 * $space-m;
-
-  @include bp(medium) {
-    margin-right: -1 * ($space-l);
-    margin-left: -1 * ($space-l);
+  @include grid-media($neat-grid-medium) {
+    @include grid-column(6);
+    @include grid-push(3);
   }
 
-  &::after {
-    position: absolute;
-    top: 1.25em; // 25px / 20px
-    right: 0;
-    left: 0;
-    z-index: -1;
-
-    display: block;
-    height: 1px;
-    background-color: color('border');
-
-    content: ' ';
+  @include grid-media($neat-grid-large) {
+    @include grid-column(9);
+    @include grid-push(4);
   }
 }
 
 .article__content {
-  // @include span-columns(12);
+  @include grid-column(5);
 
-  @include bp(medium) {
-    // @include span-columns(9);
+  @include grid-media($neat-grid-medium) {
+    @include grid-column(11);
   }
 
-  @include bp(large) {
-    // @include span-columns(7);
+  @include grid-media($neat-grid-large) {
+    @include grid-column(16);
+  }
+}
+
+.article__content--column {
+  @include grid-column(5);
+
+  @include grid-media($neat-grid-medium) {
+    @include grid-column(6);
+    @include grid-push(3);
+  }
+
+  @include grid-media($neat-grid-large) {
+    @include grid-column(9);
+    @include grid-push(4);
+  }
+}
+
+.article--full-width {
+  .article__header,
+  .article__content--column {
+    @include grid-column(5);
+
+    @include grid-media($neat-grid-medium) {
+      @include grid-column(11);
+    }
+
+    @include grid-media($neat-grid-large) {
+      @include grid-column(16);
+    }
   }
 }
 
 .article--min-height {
   min-height: #{(100 * 2 / 3)}vh;
-}
-
-.article--full-width {
-  .article__content {
-    @include bp(medium) {
-      // @include span-columns(12);
-    }
-  }
 }
 
