--- a/scss/_component.button.scss
+++ b/scss/_component.button.scss
@@ -14,6 +14,7 @@ $button-height: $space-l;
   white-space: nowrap;
   vertical-align: middle;
   background-color: color('highlight');
+  border: 0;
   box-shadow: none;
 
   &:hover,
