--- a/src/macros/contact-form.njk
+++ b/src/macros/contact-form.njk
@@ -8,7 +8,7 @@
 		<div class="article__header">
 			<h1 class="article__title">{{ title }}</h1>
 		</div>
-		<div class="article__content">
+		<div class="article__content article__content--column">
 			<form class="form" id="contact-form"
 				action="https://formspree.io/{{ email }}"
 				method="POST">
