--- a/src/thanks.html.njk
+++ b/src/thanks.html.njk
@@ -14,7 +14,7 @@ disableOgMetaTags: true
 		<div class="article__header">
 			<h1 class="article__title">Thanks</h1>
 		</div>
-		<div class="article__content">
+		<div class="article__content article__content--column">
 			<p>We will get back to shortly.</p>
 		</div>
 	</div>
